Intial update to support proto bump and base verification
Signed-off-by: Nana Essilfie-Conduah <nana@swirldslabs.com>